define for each OS the native-access-allowance in surefire plugin